[package]
name = "mqttier"
version = "0.7.4"
edition = "2021"
authors = ["Jacob Brunson <github@jacobbrunson.com>"]
description = "A Rust MQTT client library providing an abstracted interface around rumqttc."
license = "MIT"
repository = "https://github.com/stinger-ipc/mqttier"
readme = "README.md"
keywords = ["mqtt", "async", "client", "iot", "rust"]
categories = ["network-programming", "asynchronous", "api-bindings"]
documentation = "https://docs.rs/mqttier"
homepage = "https://github.com/stinger-ipc/mqttier"

[features]
metrics = []
use-rustls = ["dep:rustls", "rumqttc/use-rustls"]

[dependencies]
rumqttc = { version = "0.24" }
rustls = { version = "0.22", default-features = false, optional = true }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
derive_builder = "0.20"
bytes = "1.10.1"
stinger-mqtt-trait = { version = "0.5.1", features = ["availability_publish"] }
async-trait = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stinger-mqtt-trait = { version = "0.5.1", features = ["validation"] }
